k8s/03-db-serice.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: gestion-produits
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
