k8s/06-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: gestion-produits
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
